Changes for 1.0.0

 - [NTP-76] fixed deletion of web items when host is deleted (Vedmak)
 - [ZBX-1184] fixed support of more than 10 CPU's for system.cpu.util under Linux (Sasha)
 - [ZBX-1384] fixed memory leak in processing ldap checks (Sasha)
 - [NTP-70] fixed incorrect processing of the same log and eventlog entries (Dmitry)
 - [NTP-66] fixed illegal values in eventlog fields for non eventlog items (Sasha)
 - [NTP-72] fixed wrong trigger expression generation for log items (Vedmak)
 - [NTP-68] fixed trigger values change creating expression via trigger wizard (Vedmak)
 - [ZBX-1032] fixed security vulnerability in processing of net.tcp.listen under FreeBSD and Solaris agents (Sasha)
 - [ZBX-1050] fixed possible windows agent crash while processing big eventlog records (Sasha)
 - [NTP-59] fixed wrong history links in latest data (Vedmak)
 - [NTP-56] fixed bug with refresh when 2+ log files added in monitoring->latest data (Vedmak)
 - [NTP-30] fixed processing of multi byte strings for item.lastvalue field (sasha)
 - [NTP-49] trigger functions str, regexp and iregexp now supports text items (Sasha)
 - [NTP-51] fixed deletion of httptests (Vedmak)
 - [NTP-47] added htmlentities check in monitoring triggers and events pages (Artem)
 - [NTP-48] fixed overview page item coloring with disabled triggers (Artem)
 - [NTP-44] fixed default graph item axis side on import (Artem)
 - [NTP-46] fixed rights in host-group (Artem)
 - [ZBX-689] allowed processing of non-agent based checks for unreachable hosts (Sasha)
 - [NTP-19] added inheritance of tempalte trigger status to all linked hosts (Artem)
 - [NTP-30] added support of UTF8 in email notifications (Sasha)
 - [NTP-29] fixed malfunction of the cpu data collector for Windows agents (Sasha)
 - [NTP-34] returned graph data pickup logic (Artem)
 - [NTP-32] fixed misspelled function inserted in trigger "logserverity" (Artem)
 - [ZBX-824] fixed net.tcp.service to work with host DNS name (Alexei)